--- a/package.json
+++ b/package.json
@@ -7,12 +7,28 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
     "axios": "^1.9.0",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.1",
     "firebase": "^11.7.3",
+    "https-browserify": "^1.0.0",
+    "lucide-react": "^0.520.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-full-screen": "^1.1.1",
+    "react-icons": "^5.5.0",
+    "react-medium-image-zoom": "^5.2.14",
     "react-router-dom": "^6.22.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-zoom-pan-pinch": "^3.7.0",
+    "recharts": "^2.15.3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "styled-components": "^6.1.19",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +54,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.3"
   }
 }
