--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,77 +1,40 @@
 {
-  "name": "building-consultancy-site",
-  "version": "0.1.0",
+  "name": "frontend",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "assert": "^2.1.0",
-    "axios": "^1.9.0",
-    "bcrypt": "^6.0.0",
-    "browserify-zlib": "^0.2.0",
-    "crypto-browserify": "^3.12.1",
-    "express": "^5.1.0",
-    "firebase": "^11.7.3",
-    "google-auth-library": "^10.2.1",
-    "https-browserify": "^1.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.520.0",
-    "mongoose": "^8.17.1",
-    "nodemailer": "^7.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10",
-    "react-full-screen": "^1.1.1",
-    "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0",
-    "react-medium-image-zoom": "^5.2.14",
-    "react-router-dom": "^6.22.0",
-    "react-scripts": "^5.0.1",
-    "react-zoom-pan-pinch": "^3.7.0",
-    "recharts": "^2.15.3",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "styled-components": "^6.1.19",
-    "url": "^0.11.4",
-    "util": "^0.12.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "axios": "^1.12.2",
+    "lucide-react": "^0.544.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.9.3",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.33.2",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.3"
-  },
-  "overrides": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@eslint/js": "^9.36.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.3",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.36.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.4.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.15",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.44.0",
+    "vite": "^7.1.7"
   }
 }
