--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,14 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.4.0",
     "google-auth-library": "^10.2.1",
-    "mongoose": "^8.17.1",
-    "multer": "^2.0.2"
+    "mongoose": "^8.18.3",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.6"
   },
   "description": ""
 }
